# toGit.ai

./: .eslintrc.json  .gitignore  README.md  clean-build-env.sh  gitClone.MD  index.html  jsconfig.json  package.json  pnpm-lock.yaml  run.cmd  run.sh  test.cmd  vite.config.js
public/pages/: graph.html  graph.js  init.html  init.js
src/: App.svelte  App.vue  main.js  routes.js  test.html
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git_states.txt  main.rs
src-tauri/src/components/: branch_info.rs  file_metadata.rs  git_data.rs  git_frontend_error.rs  graph_node.rs  mod.rs  node_type.rs  repo_details.rs
src-tauri/src/git_frontend/: app_config.rs  git_frontend_module.rs  mod.rs
src-tauri/src/logic/: app_config.rs  file_watcher.rs
src/assets/: styles.css
src/components/: Clean.vue  Clone.svelte  Clone.vue  Commit.svelte  Commit.vue  DebugWindow.svelte  DebugWindow.vue  DiffViewer.svelte  DiffViewer.vue  FolderExplorerButton.vue  IndexPage.svelte  IndexPage.vue  Rebase.vue  RepositorySettings.svelte  SortableTable.svelte  SortableTable.vue  TestPage.svelte  TestPage.vue  stub.js
src/router/: index.js  routes.js
src/types/: global.d.ts
