[package]
name = "togitai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "togitai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "*", features = [] } #2
tauri-plugin-shell = "*" #2.2.0
#tauri-plugin-opener = "2"
serde = { version = "*", features = ["derive"] } #1.0.216
serde_json = "*" #1.0.134
git2 = "*" #0.19.2
libgit2-sys = "*" #0.17.0+1.8.1
home = "*" #0.5.11
shellexpand = "*" #3.1.0
log = "*" #0.4
env_logger = "*" #0.11.6
chrono = "*" #0.4.39
prettytable = "*"
thiserror = "*"
file-format = "*" 
mime_guess = "*"

[dev-dependencies]
rustfmt = "*" #2.0.0" # Or the latest version you want to use
